try to fix calendar not selecting on ios

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,13 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
-
+button,
+[role="button"] {
+  touch-action: manipulation;
+}
+.PopoverContent {
+  pointer-events: auto;
+}
 @layer utilities {
   .text-balance {
     text-wrap: balance;
